Fix copy on Our Focus page and make sure Sponsor page shows Learn More About Me links on mobile

--- a/app/views/pages/ourfocus.html.erb
+++ b/app/views/pages/ourfocus.html.erb
@@ -13,7 +13,7 @@
     </div>
   </div>
 
-  <div class="flex">
+  <div class="flex container">
     <div class="flex-item-image">
       <img src="../images/ourfocus_genderequality.png" />
     </div>
@@ -21,7 +21,7 @@
   <div class="flex page-canvas">
     <div class="flex-item-1col">
       <h2>2. GENDER EQUALITY</h2>
-      <p>Boys respect girls when they compete with them on a level playing field and see them win. Whether it’s in math, or on the soccer pitch, educating girls alongside boys can shift the thinking of an entire community. We see this come to life every day at the Mungere School. Girls who first walked in the door with heads hung low and eyes glued to the floor, blossom into confident, smart young women who know they are intelligent and capable leaders. The young men who learn and grow alongside them cannot help but be changed.</p>
+      <p>Boys respect girls when they compete with them on a level playing field and see them win. Whether it’s in math or on the soccer pitch, educating girls alongside boys can shift the thinking of an entire community. We see this come to life every day at the Mungere School. Girls who first walked in the door with heads hung low and eyes glued to the floor, blossom into confident, smart young women who know they are intelligent and capable leaders. The young men who learn and grow alongside them cannot help but be changed.</p>
       <hr>
       <strong><h5>TASIANA: A LEADER ON AND OFF THE PITCH</h5></strong>
       <p>
@@ -33,7 +33,7 @@
     </div>
   </div>
 
-  <div class="flex">
+  <div class="flex container">
     <div class="flex-item-image">
       <img src="../images/ourfocus_innovation.jpg" />
     </div>
@@ -58,11 +58,11 @@
       </p>
     </div>
   </div>
-  <div class="flex">
+  <!-- <div class="flex">
     <div class="flex-item-image">
       <img src="../images/ourfocus_innovation.jpg" />
     </div>
-  </div>
+  </div> -->
   <div class="blue">
     <div class="flex page-canvas">
       <div class="flex-item-1col">
@@ -70,7 +70,7 @@
         <h5>ALIGNED WITH THE UN’S GOALS FOR SUSTAINABLE DEVELOPMENT</h5>
         <p>The UN has set the new bar for success in global growth by defining 17 goals for sustainable development. At Red Sweater Project, we're delighted that we're already on track.</p>
         <br>
-        <p><a href="https://sustainabledevelopment.un.org/?menu=1300" target="_blank" class="white-text" style="border-bottom: 1px solid white">Explore the Sustainable Development Goals to guide development actions from 2015-2030 ></a></p>
+        <p><a href="https://sustainabledevelopment.un.org/?menu=1300" target="_blank" class="white-text" style="">Explore the Sustainable Development Goals to guide development actions from 2015-2030 ></a></p>
         <br>
         <strong><h5>HOW WE’RE CREATING CHANGE:</h5></strong>
         <ul>
