--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -213,8 +213,8 @@ h6 {
   line-height: 13px; }
 
 p, li {
-  font-size: 1.25em;
-  line-height: 1.5em;
+  font-size: 1.2em;
+  line-height: 1.2em;
   font-family: "proxima-nova", sans-serif;
   font-weight: 400;
   color: #6f6f6e; }
@@ -240,8 +240,9 @@ ul .padded li {
   letter-spacing: 0.5px;
   color: white;
   padding: 0 0 60px 0; }
-  .blue a:hover {
-    color: white; }
+  .blue a {
+    color: white;
+    border-bottom: 1px solid white; }
   .blue li, .blue p, .blue h3 {
     font-weight: 300;
     color: white; }
@@ -314,7 +315,7 @@ ul .padded li {
   background: white;
   color: #febe10;
   border: 1px solid #febe10;
-  margin: 0 15px;
+  margin: 15px 15px 0 15px;
   width: auto;
   justify-content: center;
   align-items: center;
@@ -1411,22 +1412,19 @@ form.donate-left {
   border: 1px solid #dddddb;
   border-radius: 5px;
   margin: 15px 10px;
+  min-height: 575px;
   min-width: 275px;
-  padding-top: 0;
-  padding-left: 0;
-  padding-right: 0;
-  padding-bottom: 20px;
-  min-height: 550px;
+  padding: 0 0 20px 0;
   position: relative; }
   .sponsor-students .btn.btn-yellow {
     position: absolute;
     bottom: 1em;
     width: 90%; }
-  .sponsor-students p, .sponsor-students h3, .sponsor-students h5 {
-    padding-right: 20px;
-    padding-left: 20px;
-    margin-top: 15px; }
-    .sponsor-students p a, .sponsor-students h3 a, .sponsor-students h5 a {
+  .sponsor-students h3, .sponsor-students h5 {
+    margin: 15px 0 0 15px; }
+  .sponsor-students h2, .sponsor-students h5, .sponsor-students p {
+    padding: 0 20px; }
+    .sponsor-students h2 a, .sponsor-students h5 a, .sponsor-students p a {
       padding-left: 0; }
   .sponsor-students img {
     width: 100%;
