--- a/app/assets/stylesheets/sass/1-base/_buttons.sass
+++ b/app/assets/stylesheets/sass/1-base/_buttons.sass
@@ -51,7 +51,7 @@ $text-blue: #2877A0
   background: white
   color: $yellow
   border: 1px solid $yellow
-  margin: 0 15px
+  margin: 15px 15px 0 15px
   &:hover
     background: tint($yellow, 10%)
     color: #fff
@@ -91,10 +91,6 @@ $text-blue: #2877A0
   &:hover
     background-color: $yellow
     color: white
-
-
-
-
 
 li
   .btn-donate
