--- a/app/assets/stylesheets/sass/1-base/_typography.sass
+++ b/app/assets/stylesheets/sass/1-base/_typography.sass
@@ -86,8 +86,8 @@ h6
   line-height: 13px
 
 p, li
-  font-size: 1.25em
-  line-height: 1.5em
+  font-size: 1.2em
+  line-height: 1.2em
   font-family: 'proxima-nova', sans-serif
   font-weight: 400
   color: $body-type-grey
@@ -116,9 +116,8 @@ ul
   color: white
   padding: 0 0 60px 0
   a
-    &:hover
-      color: white
-      // border-bottom: 1px solid white
+    color: white
+    border-bottom: 1px solid white
   li, p, h3
     font-weight: 300
     color: white
