--- a/app/assets/stylesheets/sass/3-layouts/_sponsor.sass
+++ b/app/assets/stylesheets/sass/3-layouts/_sponsor.sass
@@ -12,22 +12,18 @@
   border: 1px solid $hairline-grey
   border-radius: 5px
   margin: 15px 10px
+  min-height: 575px
   min-width: 275px
-  // width: 30%
-  padding-top: 0
-  padding-left: 0
-  padding-right: 0
-  padding-bottom: 20px
-  min-height: 550px
+  padding: 0 0 20px 0
   position: relative
   .btn.btn-yellow
     position: absolute
     bottom: 1em
     width: 90%
-  p, h3, h5
-    padding-right: 20px
-    padding-left: 20px
-    margin-top: 15px
+  h3, h5
+    margin: 15px 0 0 15px
+  h2, h5, p
+    padding: 0 20px
     a
       padding-left: 0
   img
