Update copy on Schools page and Bios page

--- a/app/views/pages/theteam.html.erb
+++ b/app/views/pages/theteam.html.erb
@@ -8,16 +8,15 @@
 </div>
 
 <div class="flex page-canvas">
-  <!-- <div class="page-canvas"> -->
-    <div class="flex-item-staff staff">
-      <hr class="no-margin-bottom">
-      <div class="social-media-icons">
-        <h2 class="yellow-text">STAFF</h2>
-        <%= image_tag("plus.svg", :class => "arrow-down", :id => "staff-arrow-down")%>
-        <%= image_tag("minus.svg", :class => "arrow-down", :id => "staff-arrow-up")%>
+  <div class="flex-item-staff staff">
+    <hr class="no-margin-bottom">
+    <div class="social-media-icons">
+      <h2 class="yellow-text">STAFF</h2>
+      <%= image_tag("plus.svg", :class => "arrow-down", :id => "staff-arrow-down")%>
+      <%= image_tag("minus.svg", :class => "arrow-down", :id => "staff-arrow-up")%>
 
-      </div>
     </div>
+  </div>
 
 <!-- STAFF MEMBERS -->
     <div class="flex-item-staff" id="staff">
@@ -348,7 +347,7 @@
               With over 25 years of experience in the non-profit sector, Dede McClure joins the Advisory Board having served both large and emerging non-profits in the areas of management, operations and development.
               <br>
               <br>
-              Based in Washington, D.C., Ms. McClure currently serves as Director of Operations and Development for the School for Ethics and Global Leadership, and as Principle at Thoughtful Operations, her own start-up providing support to local and international non-profit enterprises.
+              Based in Washington, D.C., Ms. McClure currently serves as Director of Operations and Development for the School for Ethics and Global Leadership and as Principal at Thoughtful Operations, her own start-up providing support to local and international non-profit enterprises.
               <br>
               <br>
               Previously, McClure served as Director of Business and Development for the Elsie Whitlow Public Charter School and Executive Director of the Greater Washington Hospitality Foundation, focusing on public relations, grant writing, and staff recruitment.  She also assisted in the founding of Sightline Marketing as the VP of Operations, where she grew the marketing and communications firm revenue and net profit during her 8-year tenure. Ms. McClure has also spent time volunteering in Tanzania with Rift Valley Children's Center in Oldeani.
@@ -403,7 +402,7 @@
               Mr. Edson co-led the development of the $45 billion President’s Emergency Plan for AIDS Relief (PEPFAR), the largest commitment ever by any nation for an international health initiative. He is credited with launching the organization Malaria No More as well as establishing the Millennium Challenge Corporation, an independent foreign aid agency reinforcing good governance, economic freedom and investment in its people.
               <br>
               <br>
-              Mr. Edson received his Bachelor of Arts in Anthropology from Stanford University (1977) and his Masters in BusinessAdministration and Juris Doctor from the University of Chicago (1982).
+              Mr. Edson received his Bachelor of Arts in Anthropology from Stanford University (1977) and his Masters in Business Administration and Juris Doctor from the University of Chicago (1982).
             </p>
           </div>
             <%= image_tag("arrow-down.svg", :class => "arrow-down", :id => "advisory-gary-arrow-down")%>
@@ -430,7 +429,7 @@
               As a former four-term Congressman from the state of Wisconsin, Green was an active member of the House Judiciary Committee and the House International Relations Committee. He also helped craft foreign policy initiatives, including the Millennium Challenge Act, America’s historic commitment to invest in developing nations that are pursuing political and economic reforms. He also participated in the enactment of the Global Access to HIV/AIDS Prevention, Awareness and Treatment Act of 2001 and the US Leadership Against HIV/AIDS, Tuberculosis and Malaria Act.
               <br>
               <br>
-              Since leaving public office, Green has served as Director for Malaria No More’s Washington D.C. policy center, From 2011-13, Ambassador Green served as President and CEO of The Initiative for Global Develoment, a non-profit organization that engages corporate leaders to reduce poverty through business growth and investment in Africa. He was then appointed Senior Director for the US Global Leadership Coalition before being named President of the International Republican Institute (IRI). He also sits on the Board of Directors of the Millennium Challenge Corporation.
+              Since leaving public office, Green has served as Director for Malaria No More’s Washington D.C. policy center. From 2011-13, Ambassador Green served as President and CEO of The Initiative for Global Develoment, a non-profit organization that engages corporate leaders to reduce poverty through business growth and investment in Africa. He was then appointed Senior Director for the US Global Leadership Coalition before being named President of the International Republican Institute (IRI). He also sits on the Board of Directors of the Millennium Challenge Corporation.
               <br>
               <br>
               Mr. Green earned his Juris Doctor from University of Wisconsin-Madison (1987) and a BA from the University of Wisconsin-Eau Claire (1983).
@@ -497,8 +496,7 @@
               </em></p>
             </div>
             <p id="advisory-tony-details">
-              Born and raised in western Kenya on the foothills of Mt. Elgon, Tony Machacha grew up in the 1970's and '80s farming his family’s ancestral land. Since, he has spent most of his career working to increase the visibility and success of small-
-              scale agricultural initiatives around the world.
+              Born and raised in western Kenya on the foothills of Mt. Elgon, Tony Machacha grew up in the 1970s and '80s farming his family’s ancestral land. Since then, he has spent most of his career working to increase the visibility and success of small-scale agricultural initiatives around the world.
               <br>
               <br>
               In 2005, Machacha joined Heifer International’s National Immigrant Farming Initiative (NIFI) as a Program Associate, coordinating technical assistance to immigrant farming projects. He has also served as a Research Assistance for the Sustainable Rural Livelihoods Program to improve food security in eastern Uganda, focused his thesis on Farmer Field Schools in western Kenya, tutored immigrant workers in Ames, Iowa, and volunteered as a staff member and on the management board for Worldly Goods, a non-profit Fair Trade enterprise.
@@ -558,9 +556,7 @@
               Prior to his work with the US State Department, So worked with the US Agency for International Development (USAID) covering post-earthquake reconstruction efforts in Haiti. His work in humanitarian assistance also includes over four years in Sudan with the International Organization for Migration in Darfur and the United Nations in South Sudan. His private sector experience includes three years at Costco Wholesale. So also serves on the Advisory Board of VIDES USA, a non-governmental organization based in San Antonio, Texas.
               <br>
               <br>
-              Mr. So graduated cum laude with a Bachelor of Arts in International Relations from Seattle University (2000) and
-              received is Masters of Arts in Peace Studies and Conflict Resolution from the University of Ulster in North Ireland (2006).
-              He also studied at the Geneva School of Diplomacy School of International Service.
+              Mr. So graduated cum laude with a Bachelor of Arts in International Relations from Seattle University (2000) and received his Masters of Arts in Peace Studies and Conflict Resolution from the University of Ulster in North Ireland (2006). He also studied at the Geneva School of Diplomacy School of International Service.
             </p>
           </div>
             <%= image_tag("arrow-down.svg", :class => "arrow-down", :id => "advisory-frank-arrow-down")%>
