--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -16,13 +16,13 @@
       <p>In Tanzania, secondary schools have incredibly high student-to-teacher ratios, teachers must utilize outdated books and learning materials, and facilities are limited. All formal exams in Tanzania are given in English, but many private secondary schools still teach in Swahili, due to teacher shortages and lack of proficiency.</p>
       <h5><strong>STILL THE AVERAGE FAMILY CAN'T AFFORD TO SEND THEIR KIDS TO SCHOOL</strong></h5>
       <p>
-      While elementary school in Tanzania is free, middle and high school costs about USD$500 per year, making it highly cost prohibitive when the average family income is roughly US $530</p>
+      While elementary school in Tanzania is free, middle and high school costs about USD $500 per year, making it highly cost prohibitive when the average family income is roughly USD $530</p>
     </div>
     <div class="col-sm-6">
      <p>per year. Even when families make great sacrifices to send a child to school, there is no guarantee of the quality of education. For students living in rural areas, attending middle or high school usually means traveling great distances daily, which can be both dangerous and exhausting.
       </p>
       <h5><strong>THE MUNGERE SCHOOL IS AFFORDABLE AND ACCESSIBLE</strong></h5>
-      <p>Families invest only US$15 per year total to cover their child's entire education. While their financial contribution doesn't cover all expenses, it pays for operating costs at the school, solidifying each family's commitment. The school is centrally located within the village, protecting students from the vulnerability of travel, and giving them much-needed time to study.</p>
+      <p>Families invest only USD $15 per year total to cover their child's entire education. While their financial contribution doesn't cover all expenses, it pays for operating costs at the school, solidifying each family's commitment. The school is centrally located within the village, protecting students from the vulnerability of travel and giving them much-needed time to study.</p>
       <h5><strong>SOMETIMES IT REALLY DOES TAKE A VILLAGE</strong></h5>
       <p>The Parent Action Committee as well as the local tribal government are actively involved with the school. Community meetings are held regularly to share ideas and solve problems in a cohesive partnership.</p>
       </div>
@@ -43,7 +43,7 @@
         </li>
 
         <h5><strong>AN ATMOSPHERE THAT PROMOTES GENDER EQUALITY</strong></h5>
-        <li>• We level the playing field for boys and girls, whether it's in the classroom, on an athletic field or a debate stage. This approach builds the confidence of female students and teaches all students that everyone has strengths that are not defined or limited by gender. </li>
+        <li>• We level the playing field for boys and girls, whether it's in the classroom, on an athletic field or on a debate stage. This approach builds the confidence of female students and teaches all students that everyone has strengths that are not defined or limited by gender. </li>
       </ul>
 
       <h5><strong>SUSTAINABLY DESIGNED, MODERN FACILITIES</strong></h5>
@@ -57,7 +57,7 @@
       <ul>
         <li>• Safe drinking water is available to all students.</li>
         <li>• Health outreach helps to boost health and prevent disease within the community.</li>
-        <li>• If a student becomes ill, they're treated. Illnesses commonly treated include: malaria, typhoid and pneumonia.</li>
+        <li>• If a student becomes ill, they're treated. Illnesses commonly treated include malaria, typhoid and pneumonia.</li>
         <li>• Two balanced meals are served each day, supplemented with fresh organic vegetables from the school garden. </li>
         <li>• Gas burners eliminate the school's need for firewood, which would contribute to deforestation.</li>
         <li>• Campus is equipped with composting toilets and handwashing stations with waste safely recycled to replenish nutrients in the school's garden soil.</li>
@@ -85,7 +85,7 @@
         <h5><strong>SMALL BUSINESS SKILLS</strong></h5>
         <p><em>The School Store</em></p>
         <ul>
-          <li>• Provides a valued resource for the entire community, where local families can purchase goods and sundries at reasonable prices. The next closest market is a 3km walk, and is only open on select days and has a limited selection.</li>
+          <li>• Provides a valued resource for the entire community, where local families can purchase goods and sundries at reasonable prices. The next closest market, a 3km walk away, is only open on select days and has a limited selection.</li>
           <li>• Operates the first ever solar-powered mobile phone and lantern charging station for community members, keeping families connected.
           </li>
           <li>• Gives students the opportunity to apply math and economics coursework to real life scenarios.</li>
@@ -116,13 +116,12 @@
         <p><em>The Mungere Athletics Program</em></p>
         <ul>
           <li>• Sometimes lessons in teamwork, dedication and respect are taught best on the football pitch or basketball court. That's why time for athletics is built into each school week and encouraged outside of class.</li>
-          <li>• Promotes gender equality on campus. Ninth grade student Tasiana Kabuka is a prime example. She is the first girl in the region to play on an all-boys soccer team, and has been recognized by her fellow classmates as well as by FIFA for her skills and leadership on the soccer pitch.</li>
+          <li>• Promotes gender equality on campus. Ninth grade student Tasiana Kabuka is a prime example. She is the first girl in the region to play on an all-boys soccer team and has been recognized by her fellow classmates as well as by FIFA for her skills and leadership on the soccer pitch.</li>
         </ul>
       </div>
     </div>
   </div>
 </div>
-
 
 <div class="blue">
   <div class="flex page-canvas">
@@ -144,8 +143,6 @@
       </div>
     </div>
   </div>
-
-
 </div>
 
 <div class="yellow">
@@ -172,22 +169,22 @@
 </div>
 
 <script type="text/javascript">
-handler = Gmaps.build('Google');
-handler.buildMap({ provider: {disableDefaultUI: true}, internal: {id: 'map'}}, function(){
-  markers = handler.addMarkers([
-    {
-      "lat": -3.35,
-      "lng": 35.85,
-      // "infowindow": "Mungere School"
-      // "picture": {
-      //   "url": "/images/RSPlogo_175x59.png",
-      //   "width":  32,
-      //   "height": 32
-      // },
-    }
-  ]);
-  handler.bounds.extendWith(markers);
-  handler.fitMapToBounds();
-  handler.getMap().setZoom(6);
-});
+  handler = Gmaps.build('Google');
+  handler.buildMap({ provider: {disableDefaultUI: true}, internal: {id: 'map'}}, function(){
+    markers = handler.addMarkers([
+      {
+        "lat": -3.35,
+        "lng": 35.85,
+        // "infowindow": "Mungere School"
+        // "picture": {
+        //   "url": "/images/RSPlogo_175x59.png",
+        //   "width":  32,
+        //   "height": 32
+        // },
+      }
+    ]);
+    handler.bounds.extendWith(markers);
+    handler.fitMapToBounds();
+    handler.getMap().setZoom(6);
+  });
 </script>
